docs/api/qiskit/0.19/qiskit.quantum_info.Kraus.mdx
---
title: Kraus (v0.19)
description: API reference for qiskit.quantum_info.Kraus in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.Kraus
---

# Kraus

<Class id="qiskit.quantum_info.Kraus" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/channel/kraus.py" signature="Kraus(data, input_dims=None, output_dims=None)" modifiers="class">
  Kraus representation of a quantum channel.

  The Kraus representation for a quantum channel $\mathcal{E}$ is a set of matrices $[A_0,...,A_{K-1}]$ such that

  For a quantum channel $\mathcal{E}$, the Kraus representation is given by a set of matrices $[A_0,...,A_{K-1}]$ such that the evolution of a [`DensityMatrix`](qiskit.quantum_info.DensityMatrix "qiskit.quantum_info.DensityMatrix") $\rho$ is given by

$$
\mathcal{E}(\rho) = \sum_{i=0}^{K-1} A_i \rho A_i^\dagger
$$

  A general operator map $\mathcal{G}$ can also be written using the generalized Kraus representation which is given by two sets of matrices $[A_0,...,A_{K-1}]$, $[B_0,...,A_{B-1}]$ such that

$$
\mathcal{G}(\rho) = \sum_{i=0}^{K-1} A_i \rho B_i^\dagger
$$

  See reference \[1] for further details.

  **References**

  1.  C.J. Wood, J.D. Biamonte, D.G. Cory, *Tensor networks and graphical calculus for open quantum systems*, Quant. Inf. Comp. 15, 0579-0811 (2015). [arXiv:1111.6950 \[quant-ph\]](https://arxiv.org/abs/1111.6950)

  Initialize a quantum channel Kraus operator.

  **Parameters**

  *   **or** (*data (*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – Instruction or BaseOperator or matrix): data to initialize superoperator.
  *   **input\_dims** (*tuple*) – the input subsystem dimensions. \[Default: None]
  *   **output\_dims** (*tuple*) – the output subsystem dimensions. \[Default: None]

  **Raises**

  **QiskitError** – if input data cannot be initialized as a a list of Kraus matrices.

  **Additional Information:**

  If the input or output dimensions are None, they will be automatically determined from the input data. If the input data is a list of Numpy arrays of shape (2\*\*N, 2\*\*N) qubit systems will be used. If the input does not correspond to an N-qubit channel, it will assign a single subsystem with dimension specified by the shape of the input.

  ## Attributes

  <span id="kraus-atol" />

  ### atol

  <Attribute id="qiskit.quantum_info.Kraus.atol">
    The default absolute tolerance parameter for float comparisons.
  </Attribute>

  <span id="kraus-data" />

  ### data

  <Attribute id="qiskit.quantum_info.Kraus.data">
    Return list of Kraus matrices for channel.
  </Attribute>

  <span id="kraus-dim" />

  ### dim

  <Attribute id="qiskit.quantum_info.Kraus.dim">
    Return tuple (input\_shape, output\_shape).
  </Attribute>

  <span id="kraus-num-qubits" />

  ### num\_qubits

  <Attribute id="qiskit.quantum_info.Kraus.num_qubits">
    Return the number of qubits if a N-qubit operator or None otherwise.
  </Attribute>

  <span id="kraus-qargs" />

  ### qargs

  <Attribute id="qiskit.quantum_info.Kraus.qargs">
    Return the qargs for the operator.
  </Attribute>

  <span id="kraus-rtol" />

  ### rtol

  <Attribute id="qiskit.quantum_info.Kraus.rtol">
    The relative tolerance parameter for float comparisons.
  </Attribute>

  ## Methods

  <span id="kraus-call" />

  ### \_\_call\_\_

  <Function id="qiskit.quantum_info.Kraus.__call__" signature="Kraus.__call__(qargs)">
    Return a clone with qargs set
  </Function>

  <span id="kraus-mul" />

  ### \_\_mul\_\_

  <Function id="qiskit.quantum_info.Kraus.__mul__" signature="Kraus.__mul__(other)" />

  <span id="kraus-add" />

  ### add

  <Function id="qiskit.quantum_info.Kraus.add" signature="Kraus.add(other)">
    Return the linear operator self + other.

    DEPRECATED: use `operator + other` instead.

    **Parameters**

    **other** (*BaseOperator*) – an operator object.

    **Returns**

    the operator self + other.

    **Return type**

    BaseOperator
  </Function>

  <span id="kraus-adjoint" />

  ### adjoint

  <Function id="qiskit.quantum_info.Kraus.adjoint" signature="Kraus.adjoint()">
    Return the adjoint of the operator.
  </Function>

  <span id="kraus-compose" />

  ### compose

  <Function id="qiskit.quantum_info.Kraus.compose" signature="Kraus.compose(other, qargs=None, front=False)">
    Return the composed quantum channel self @ other.

    **Parameters**

    *   **other** (*QuantumChannel*) – a quantum channel.
    *   **qargs** (*list or None*) – a list of subsystem positions to apply other on. If None apply on all subsystems \[default: None].
    *   **front** (*bool*) – If True compose using right operator multiplication, instead of left multiplication \[default: False].

    **Returns**

    The quantum channel self @ other.

    **Return type**

    [Kraus](qiskit.quantum_info.Kraus "qiskit.quantum_info.Kraus")

    **Raises**

    **QiskitError** – if other cannot be converted to a Kraus or has incompatible dimensions.

    #### Additional Information:

    Composition (`@`) is defined as left matrix multiplication for [`SuperOp`](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp") matrices. That is that `A @ B` is equal to `B * A`. Setting `front=True` returns right matrix multiplication `A * B` and is equivalent to the [`dot()`](qiskit.quantum_info.Kraus#dot "qiskit.quantum_info.Kraus.dot") method.
  </Function>

  <span id="kraus-conjugate" />

  ### conjugate

  <Function id="qiskit.quantum_info.Kraus.conjugate" signature="Kraus.conjugate()">
    Return the conjugate of the QuantumChannel.
  </Function>

  <span id="kraus-copy" />

  ### copy

  <Function id="qiskit.quantum_info.Kraus.copy" signature="Kraus.copy()">
    Make a deep copy of current operator.
  </Function>

  <span id="kraus-dot" />

  ### dot

  <Function id="qiskit.quantum_info.Kraus.dot" signature="Kraus.dot(other, qargs=None)">
    Return the right multiplied quantum channel self \* other.

    **Parameters**

    *   **other** (*QuantumChannel*) – a quantum channel.
    *   **qargs** (*list or None*) – a list of subsystem positions to apply other on. If None apply on all subsystems \[default: None].

    **Returns**

    The quantum channel self \* other.

    **Return type**

    [Kraus](qiskit.quantum_info.Kraus "qiskit.quantum_info.Kraus")

    **Raises**

    **QiskitError** – if other cannot be converted to a Kraus or has incompatible dimensions.
  </Function>

  <span id="kraus-expand" />

  ### expand

  <Function id="qiskit.quantum_info.Kraus.expand" signature="Kraus.expand(other)">
    Return the tensor product channel other ⊗ self.

    **Parameters**

    **other** (*QuantumChannel*) – a quantum channel subclass.

    **Returns**

    the tensor product channel other ⊗ self as a Kraus object.

    **Return type**

    [Kraus](qiskit.quantum_info.Kraus "qiskit.quantum_info.Kraus")

    **Raises**

    **QiskitError** – if other cannot be converted to a channel.
  </Function>

  <span id="kraus-input-dims" />

  ### input\_dims

  <Function id="qiskit.quantum_info.Kraus.input_dims" signature="Kraus.input_dims(qargs=None)">
    Return tuple of input dimension for specified subsystems.
  </Function>

  <span id="kraus-is-cp" />

  ### is\_cp

  <Function id="qiskit.quantum_info.Kraus.is_cp" signature="Kraus.is_cp(atol=None, rtol=None)">
    Test if Choi-matrix is completely-positive (CP)
  </Function>

  <span id="kraus-is-cptp" />

  ### is\_cptp

  <Function id="qiskit.quantum_info.Kraus.is_cptp" signature="Kraus.is_cptp(atol=None, rtol=None)">
    Return True if completely-positive trace-preserving.
  </Function>

  <span id="kraus-is-tp" />

  ### is\_tp

  <Function id="qiskit.quantum_info.Kraus.is_tp" signature="Kraus.is_tp(atol=None, rtol=None)">
    Test if a channel is completely-positive (CP)
  </Function>

  <span id="kraus-is-unitary" />

  ### is\_unitary

  <Function id="qiskit.quantum_info.Kraus.is_unitary" signature="Kraus.is_unitary(atol=None, rtol=None)">
    Return True if QuantumChannel is a unitary channel.
  </Function>

  <span id="kraus-multiply" />

  ### multiply

  <Function id="qiskit.quantum_info.Kraus.multiply" signature="Kraus.multiply(other)">
    Return the linear operator other \* self.

    DEPRECATED: use `other * operator` instead.

    **Parameters**

    **other** (*complex*) – a complex number.

    **Returns**

    the linear operator other \* self.

    **Return type**

    BaseOperator

    **Raises**

    **NotImplementedError** – if subclass does not support multiplication.
  </Function>

  <span id="kraus-output-dims" />

  ### output\_dims

  <Function id="qiskit.quantum_info.Kraus.output_dims" signature="Kraus.output_dims(qargs=None)">
    Return tuple of output dimension for specified subsystems.
  </Function>

  <span id="kraus-power" />

  ### power

  <Function id="qiskit.quantum_info.Kraus.power" signature="Kraus.power(n)">
    The matrix power of the channel.

    **Parameters**

    **n** (*int*) – compute the matrix power of the superoperator matrix.

    **Returns**

    the matrix power of the SuperOp converted to a Kraus channel.

    **Return type**

    [Kraus](qiskit.quantum_info.Kraus "qiskit.quantum_info.Kraus")

    **Raises**

    **QiskitError** – if the input and output dimensions of the QuantumChannel are not equal, or the power is not an integer.
  </Function>

  <span id="kraus-reshape" />

  ### reshape

  <Function id="qiskit.quantum_info.Kraus.reshape" signature="Kraus.reshape(input_dims=None, output_dims=None)">
    Return a shallow copy with reshaped input and output subsystem dimensions.

    #### Arg:

    #### input\_dims (None or tuple): new subsystem input dimensions.

    If None the original input dims will be preserved \[Default: None].

    #### output\_dims (None or tuple): new subsystem output dimensions.

    If None the original output dims will be preserved \[Default: None].

    **Returns**

    returns self with reshaped input and output dimensions.

    **Return type**

    BaseOperator

    **Raises**

    **QiskitError** – if combined size of all subsystem input dimension or subsystem output dimensions is not constant.
  </Function>

  <span id="kraus-set-atol" />

  ### set\_atol

  <Function id="qiskit.quantum_info.Kraus.set_atol" signature="Kraus.set_atol(value)" modifiers="classmethod">
    Set the class default absolute tolerance parameter for float comparisons.
  </Function>

  <span id="kraus-set-rtol" />

  ### set\_rtol

  <Function id="qiskit.quantum_info.Kraus.set_rtol" signature="Kraus.set_rtol(value)" modifiers="classmethod">
    Set the class default relative tolerance parameter for float comparisons.
  </Function>

  <span id="kraus-subtract" />

  ### subtract

  <Function id="qiskit.quantum_info.Kraus.subtract" signature="Kraus.subtract(other)">
    Return the linear operator self - other.

    DEPRECATED: use `operator - other` instead.

    **Parameters**

    **other** (*BaseOperator*) – an operator object.

    **Returns**

    the operator self - other.

    **Return type**

    BaseOperator
  </Function>

  <span id="kraus-tensor" />

  ### tensor

  <Function id="qiskit.quantum_info.Kraus.tensor" signature="Kraus.tensor(other)">
    Return the tensor product channel self ⊗ other.

    **Parameters**

    **other** (*QuantumChannel*) – a quantum channel subclass.

    **Returns**

    the tensor product channel self ⊗ other as a Kraus object.

    **Return type**

    [Kraus](qiskit.quantum_info.Kraus "qiskit.quantum_info.Kraus")

    **Raises**

    **QiskitError** – if other cannot be converted to a channel.
  </Function>

  <span id="kraus-to-instruction" />

  ### to\_instruction

  <Function id="qiskit.quantum_info.Kraus.to_instruction" signature="Kraus.to_instruction()">
    Convert to a Kraus or UnitaryGate circuit instruction.

    If the channel is unitary it will be added as a unitary gate, otherwise it will be added as a kraus simulator instruction.

    **Returns**

    A kraus instruction for the channel.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **QiskitError** – if input data is not an N-qubit CPTP quantum channel.
  </Function>

  <span id="kraus-to-operator" />

  ### to\_operator

  <Function id="qiskit.quantum_info.Kraus.to_operator" signature="Kraus.to_operator()">
    Try to convert channel to a unitary representation Operator.
  </Function>

  <span id="kraus-transpose" />

  ### transpose

  <Function id="qiskit.quantum_info.Kraus.transpose" signature="Kraus.transpose()">
    Return the transpose of the QuantumChannel.
  </Function>
</Class>

